<!--
/*
 * Copyright 2012-2013 Andrea De Cesare
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">    
    <item android:id="@+id/menu_search"
	    android:title="@string/search"
	    android:icon="@drawable/search"
	    android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_gotoPlayingSongDirectory"
	    android:title="@string/gotoPlayingSongDirectory"
	    android:icon="@drawable/pin"
	    android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_gotoBaseFolder"
        android:title="@string/gotoBaseFolder"
        android:showAsAction="never" />
	
	<item android:id="@+id/menu_songInfo"
	    android:title="@string/songInfo" />
	
	<item android:id="@+id/menu_setAsBaseFolder"
	    android:title="@string/setAsBaseFolder" />
	
	<item android:id="@+id/menu_removeAllEpisodes"
	    android:title="@string/removeAllEpisodes" />
	
	<item android:id="@+id/menu_removeDownloadedEpisodes"
	    android:title="@string/removeDownloadedEpisodes" />
	
	<item android:id="@+id/menu_preferences"
		android:title="@string/preferences"
		android:orderInCategory="50"
		android:icon="@drawable/settings" />
	
	<item android:id="@+id/menu_quit"
		android:title="@string/quit"
		android:orderInCategory="100"
		android:icon="@drawable/quit" />
</menu>
