<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright 2012-2014 Andrea De Cesare
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutPlaybackControls"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:visibility="gone" >

    <ImageButton
        android:id="@+id/imageButtonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/previous"
        android:contentDescription="@string/previous"
        android:layout_marginLeft="3dp"
        android:background="@drawable/orange_button" />

    <ImageButton
        android:id="@+id/imageButtonPlayPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play"
        android:contentDescription="@string/play"
        android:layout_marginLeft="3dp"
        android:background="@drawable/orange_button" />

    <ImageButton
        android:id="@+id/imageButtonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/next"
        android:contentDescription="@string/next"
        android:layout_marginLeft="3dp"
        android:background="@drawable/orange_button" />

</LinearLayout>