<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright 2012-2014 Andrea De Cesare
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_container"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/navigationBackground" >

    <LinearLayout
        android:id="@+id/layoutShuffleRepeatButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp" >

            <ImageButton
                android:id="@+id/imageButtonShuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/navigation_button_off"
                android:src="@drawable/shuffle" />

            <ImageButton
                android:id="@+id/imageButtonRepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@drawable/navigation_button_off"
                android:src="@drawable/repeat" />

            <ImageButton
                android:id="@+id/imageButtonRepeatAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@drawable/navigation_button_off"
                android:src="@drawable/repeatall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="-1dp" >

            <Button
                android:id="@+id/buttonBassBoost"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/navigation_button_off"
                android:text="@string/bassBoostButton"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonEqualizer"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@drawable/navigation_button_off"
                android:text="@string/equalizerButton"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonShake"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@drawable/navigation_button_off"
                android:text="@string/shake"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_buttonQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:src="@drawable/navigation_cancel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/navigationTextColor" />
    </LinearLayout>

    <ListView
        android:id="@+id/navigation_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/navigation_buttonQuit"
        android:layout_below="@id/layoutShuffleRepeatButtons"
        android:choiceMode="singleChoice" />

</RelativeLayout>